# proyectos-para-recuperar-1-evaluacion

./: LICENSE  README.md
Tienda_Instrumentos/: manage.py  pyproject.toml
Tienda_Instrumentos/Tienda_Instrumentos/: asgi.py  settings.py  urls.py  wsgi.py
Tienda_Instrumentos/catalogo/: forms.py  models.py  urls.py  views.py
Tienda_Instrumentos/catalogo/migrations/: 0001_initial.py  0002_categoria_familia_categoria_tipo.py
Tienda_Instrumentos/catalogo/templates/catalogo/: formulario_categoria.html  formulario_instrumento.html  formulario_marca.html  index.html  listado_instrumentos.html
Tienda_Instrumentos/static/css/: estilos.css
Tienda_Instrumentos/templates/: base_generic.html
